<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:id="@+id/linearLayoutWeeks">

        <TextView
            android:text="@string/jalaliCalendarViewShanbeh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorCalendarWeekNameText"
            android:textAlignment="center" />
        <TextView
            android:text="@string/jalaliCalendarViewYekShanbeh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorCalendarWeekNameText"
            android:textAlignment="center"
            android:layout_weight="1" />
        <TextView
            android:text="@string/jalaliCalendarViewDoShanbeh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorCalendarWeekNameText"
            android:textAlignment="center"
            android:layout_weight="1" />
        <TextView
            android:text="@string/jalaliCalendarViewSehShanbeh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorCalendarWeekNameText"
            android:textAlignment="center"
            android:layout_weight="1" />
        <TextView
            android:text="@string/jalaliCalendarViewChaharShanbeh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorCalendarWeekNameText"
            android:textAlignment="center"
            android:layout_weight="1" />
        <TextView
            android:text="@string/jalaliCalendarViewPanjShanbeh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorCalendarWeekNameText"
            android:textAlignment="center"
            android:layout_weight="1" />
        <TextView
            android:text="@string/jalaliCalendarViewJomeh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorCalendarWeekNameText"
            android:textAlignment="center"
            android:layout_weight="1" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPagerCalendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>